[tool.poetry]
name = "upkeep"
version = "1.4.3"
description = "Portage update helper commands."
authors = ["Andrew Udvare <audvare@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "upkeep"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
click = "^8.1.3"
loguru = ">=0.6,<0.8"

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991,<1.9"
pylint = ">=2.15.10,<4.0.0"
pylint-quotes = "^0.2.3"
rope = "^1.7.0"
isort = "^5.12.0"
toml = "^0.10.2"

[tool.poetry.group.testing.dependencies]
levenshtein = ">=0.20.9,<0.25.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=6.1.3,<8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ecleans = "upkeep.commands:ecleans_command"
emerges = "upkeep.commands:emerges_command"
esync = "upkeep.commands:esync_command"
rebuild-kernel = "upkeep.commands:rebuild_kernel_command"
upgrade-kernel = "upkeep.commands:upgrade_kernel_command"
